--- a/RestaurantManagementSystem/backend/pom.xml
+++ b/RestaurantManagementSystem/backend/pom.xml
@@ -1,4 +1,3 @@
-<!-- File: pom.xml -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -21,8 +20,8 @@
     </parent>
 
     <properties>
-        <java.version>17</java.version>
-        <!-- or 11, but 17 is an LTS release often used with Spring Boot 3 -->
+        <java.version>21</java.version> <!-- Ensure Java 21 is set here -->
+        <spring-boot.version>3.0.2</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -72,6 +71,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.example.restaurant.RestaurantManagementApplication</mainClass> <!-- Replace with your main class -->
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -79,6 +81,17 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- Maven Compiler Plugin to ensure Java 21 is used -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>21</source> <!-- Specify Java 21 -->
+                    <target>21</target> <!-- Specify Java 21 -->
+                </configuration>
             </plugin>
         </plugins>
     </build>
