--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<!-- File: pom.xml -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -72,6 +71,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <!-- Specify the main class to run when packaging -->
+                    <mainClass>com.example.restaurant.RestaurantManagementApplication</mainClass> 
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
