--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,9 @@
     </parent>
 
     <properties>
+        <!-- Set the Java version to 17 -->
         <java.version>17</java.version>
-        <!-- or 11, but 17 is an LTS release often used with Spring Boot 3 -->
+        <spring-boot.version>3.0.2</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -72,8 +73,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <!-- Specify the main class to run when packaging -->
-                    <mainClass>com.example.restaurant.RestaurantManagementApplication</mainClass> 
+                    <mainClass>com.example.restaurant.RestaurantManagementApplication</mainClass> <!-- Replace with your main class -->
                 </configuration>
                 <executions>
                     <execution>
@@ -82,6 +82,17 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- Maven Compiler Plugin to ensure Java 17 is used -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>17</source> <!-- Specify Java 17 -->
+                    <target>17</target> <!-- Specify Java 17 -->
+                </configuration>
             </plugin>
         </plugins>
     </build>
