--- a/RestaurantManagementSystem/backend/pom.xml
+++ b/RestaurantManagementSystem/backend/pom.xml
@@ -20,8 +20,8 @@
     </parent>
 
     <properties>
-        <java.version>21</java.version> <!-- Ensure Java 21 is set here -->
-        <spring-boot.version>3.0.2</spring-boot.version>
+        <!-- Set the Java version to 17 -->
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
@@ -72,7 +72,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.example.restaurant.RestaurantManagementApplication</mainClass> <!-- Replace with your main class -->
+                    <mainClass>com.example.restaurant.RestaurantManagementApplication</mainClass> <!-- Ensure this path is correct -->
                 </configuration>
                 <executions>
                     <execution>
@@ -83,14 +83,14 @@
                 </executions>
             </plugin>
 
-            <!-- Maven Compiler Plugin to ensure Java 21 is used -->
+            <!-- Maven Compiler Plugin to ensure Java 17 is used -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>21</source> <!-- Specify Java 21 -->
-                    <target>21</target> <!-- Specify Java 21 -->
+                    <source>17</source> <!-- Specify Java 17 -->
+                    <target>17</target> <!-- Specify Java 17 -->
                 </configuration>
             </plugin>
         </plugins>
