--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<!-- File: pom.xml -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -20,9 +21,8 @@
     </parent>
 
     <properties>
-        <!-- Set the Java version to 17 -->
         <java.version>17</java.version>
-        <spring-boot.version>3.0.2</spring-boot.version>
+        <!-- or 11, but 17 is an LTS release often used with Spring Boot 3 -->
     </properties>
 
     <dependencies>
@@ -72,9 +72,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>com.example.restaurant.RestaurantManagementApplication</mainClass> <!-- Replace with your main class -->
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -82,17 +79,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-
-            <!-- Maven Compiler Plugin to ensure Java 17 is used -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
-                <configuration>
-                    <source>17</source> <!-- Specify Java 17 -->
-                    <target>17</target> <!-- Specify Java 17 -->
-                </configuration>
             </plugin>
         </plugins>
     </build>
